# macro-invest-agent-system

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  _config.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  copilot-setup-steps.yml  pages.yml
adapters/: __init__.py
adapters/repositories/: __init__.py  in_memory_alert_store.py  in_memory_event_store.py  in_memory_explanation_store.py  in_memory_feature_store.py  in_memory_macro_regime_store.py  in_memory_macro_snapshot_store.py
adapters/sources/: __init__.py  fixture_macro_data_source.py  in_memory_macro_data_source.py  source_registry.py
agent/: __init__.py  mcp_adapter.py  schemas.py  service.py
agent/context/: __init__.py  models.py  store.py  trimming.py
agent/formatting/: __init__.py  comparison.py  errors.py  summaries.py
agent/prompts/: __init__.py  signal_review.md  snapshot_summary.md  templates.py
agent/runtime/: __init__.py  agent_runtime.py  langchain_runtime.py  output_validation.py  tools.py
alembic/: __init__.py
alembic/versions/: 0001_feature_store_initial.py
apps/api/: Dockerfile  dependencies.py  main.py  startup_seeder.py
apps/workbench/: __init__.py  app.py
backlog/: 0001-bootstrap-backlog-source.md  0101-phase1-priority-ingestion-foundation.md  0102-phase1-checklist-hardening.md  0103-docs-role-separation-alignment.md  0201-phase2-snapshot-contract-builder-and-compare.md  0301-regime_schema_definition.md  0302-regime_vocabulary_definition.md  0303-snapshot_to_regime_mapping_rules.md  0304-regime_confidence_and_degraded_handling.md  0305-regime_builder_service.md  0306-regime_persistence_model.md  0307-regime_transition_logic.md  0308-regime_api_contract.md  0309-regime_docs_cleanup.md  0310-phase3_tests_and_validation.md
core/config/: settings.py
core/contracts/: __init__.py  feature_store_repository.py  macro_data_source.py  macro_regime_repository.py  macro_snapshot_repository.py
core/exceptions/: base.py  failure_category.py
core/logging/: logger.py  timing.py
core/metrics/: __init__.py  registry.py
core/schemas/: common.py
core/tracing/: __init__.py  span_attributes.py  tracer.py
deploy/: prometheus.yml
docs/: adding_a_provider.md  agent_layer.md  agent_runtime.md  architecture.md  architecture_overview.md  ci_cd.md  conflict_surface_v1.md  contracts.md  conversation_context.md  data_pipeline_groundwork.md  deployment.md  engineering_rules.md  failure_taxonomy.md  first_pr_scope.md  fred_data_source.md  freshness_policy.md  ingestion_design.md  legacy_surface_status.md  macro_indicator_catalog.md  mcp_entrypoints.md  metrics.md  observability.md  phase1_checklist.md  phase1_macro_data_foundation.md  phase2_runtime.md  phase6_analyst_surface.md  project_brief.md  regime_api_contract.md  regime_builder.md  regime_confidence_policy.md  regime_engine.md  regime_mapping_rules.md  regime_persistence.md  regime_schema.md  regime_transition_rules.md  regime_vocabulary.md  release_gating.md  roadmap.md  snapshot_comparison.md  snapshot_schema.md  (+2 more)
docs/adr/: 001-deterministic-core-and-agent-separation.md
docs/alerts/: prometheus_rules.yml
docs/backlog/: 0401-regime-grounded-signals.md  0402-narrative-explanations.md  0403-quant-confidence-conflict.md
docs/dashboards/: macro_platform_overview.json
docs/runbooks/: README.md  pipeline_stuck_or_failing.md  provider_data_unavailable.md  schema_regression_after_deploy.md  stale_feature_store_data.md  visibility_gap.md
domain/alerts/: __init__.py  models.py  rule_engine.py  rules.py
domain/attribution/: __init__.py  attribution_engine.py  enums.py  models.py
domain/events/: __init__.py  enums.py  impact.py  models.py  normalizer.py
domain/macro/: __init__.py  change_detection.py  comparison.py  enums.py  history.py  models.py  narrative_builder.py  regime.py  regime_mapping.py  regime_transition.py  snapshot.py
domain/quant/: __init__.py  models.py  scoring.py
domain/signals/: __init__.py  conflict.py  (+6 more)
evals/: README.md  conftest.py
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
logs/: blockers.md  changelog.md  decisions.md  progress.md
services/: __init__.py  event_impact_adapter.py  interfaces.py  macro_regime_service.py  macro_service.py  macro_snapshot_service.py  quant_scoring_service.py  signal_service.py
(+166 files in other folders)
