[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macro-invest-agent-platform"
version = "0.1.0"
description = "Macroeconomic-data-driven investment decision platform with deterministic core and AI agent layer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "domain", "mcp", "apps"]

# ---------------------------------------------------------------------------
# ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for `self`
    "ANN102", # missing type annotation for `cls`
    "S101",   # use of assert (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
