[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macro-invest-agent-platform"
version = "0.1.0"
description = "Modular backend and data pipeline platform for macro investment agent systems"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "prefect>=3.0.0",
    "streamlit>=1.37.0",
    "structlog>=24.1.0",
    "langchain-core>=1.2.22",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"
addopts = "--strict-markers -ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "N",   # pep8-naming
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["macro_invest_agent_platform"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.hatch.build.targets.wheel]
packages = ["agent", "apps", "core", "domain", "evals", "mcp", "pipelines"]
